# cs739-cloud-native

./: .gitignore  README.md  build.sh  clean_dir.sh  install_grpc.sh  key_value_storage.cc  one_server_config.txt  provision.sh  yishen_admin.txt
example/: CMakeLists.txt  base64_image.txt  build.sh  main.cpp  s3_manager.h  tmp.cpp  trust-policy.json
s3_related/: CMakeLists.txt  build.sh  lambda_function_handler.cpp  main.cpp
s3_related/test/: LOG  LOG.old  MANIFEST-000013
src/: CMakeLists.txt  admin_cli.cpp  admin_grpc.cpp  admin_grpc.h  client_cli.cpp  client_grpc.cpp  client_grpc.h  consistent_hashing_ring.cpp  consistent_hashing_ring.h  consistent_hashing_ring_test.cpp  dynamo_server.cpp  gossip_node.cpp  gossip_node.h  gossip_node.proto  gossip_node_CMakeLists.txt  gossip_node_test.cpp  gossip_test.cpp  lambda_runtime.cpp  main.cpp  state_machine.cpp  state_machine.h  state_machine_test.cpp  test_state_machine.cpp
src/performance/: admin_auto_start.cpp  kill_running_servers.sh  multiple_client_test.cpp  run_multiple_servers.sh  throughput.cpp  throughput.h  throughput_result_get_1_clients_.txt  throughput_result_get_5_clients_.txt  throughput_result_put_1_clients_.txt  throughput_result_put_5_clients_.txt  throughput_result_put_5_clients_N3W2R2.txt  yishen_run_multiple_servers.sh  yishen_scp.sh
